--- a/deploy_tools/nginx.template.conf
+++ b/deploy_tools/nginx.template.conf
@@ -1,13 +1,13 @@
 server {
 	listen 80;
-	server_name DOMAIN;
+	server_name SITENAME;
 
 	location /static {
-		alias /home/ubuntu/sites/DOMAIN/static;
+		alias /home/ubuntu/sites/SITENAME/static;
 	}
 	
 	location / {
-	proxy_pass http://unix:/tmp/DOMAIN.socket;
+	proxy_pass http://unix:/tmp/SITENAME.socket;
 	proxy_set_header Host $host;
 	}
 }
