--- a/deploy_tools/gunicorn-systemd.template.service
+++ b/deploy_tools/gunicorn-systemd.template.service
@@ -1,13 +1,13 @@
 [Unit]
-Description=Gunicron server for DOMAIN
+Description=Gunicron server for SITENAME
 
 [Service]
 Restart=on-failure
 User=ubuntu
-WorkingDirectory=/home/ubuntu/sites/DOMAIN
-EnvironmentFile=/home/ubuntu/sites/DOMAIN/.env
+WorkingDirectory=/home/ubuntu/sites/SITENAME
+EnvironmentFile=/home/ubuntu/sites/SITENAME/.env
 
-ExecStart=/home/ubuntu/sites/DOMAIN/virtualenv/bin/gunicron --bind unix:/tmp/DOMAIN.socket superlist.wsgi:application
+ExecStart=/home/ubuntu/sites/SITENAME/virtualenv/bin/gunicron --bind unix:/tmp/SITENAME.socket superlist.wsgi:application
 
 [Install]
 WanteBy=multi-user.target
