--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 astroid==2.2.5
 Django==1.11.20
-isort==4.3.17
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 pytz==2019.1
@@ -10,3 +9,4 @@ typed-ast==1.3.4
 urllib3==1.24.1
 wrapt==1.11.1
 gunicorn==19.9.0
+fabric3==1.14
